pii/src/snapshots/tests__redact_containers.snap
---
source: pii/src/processor.rs
expression: event
---
{
  "extra": null,
  "_meta": {
    "extra": {
      "": {
        "rem": [
          [
            "@anything",
            "x"
          ]
        ]
      }
    }
  }
}
